# rust-wgpu

./: Cargo.toml  readme.md
src/: application.rs  camera.rs  lib.rs  main.rs  renderer.rs  scene.rs  state.rs  texture.rs  util.rs
src/asset/shader/: basic_shape.wgsl
src/shaders/: shader.wgsl
