[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.28", features = ["wayland"] }
wgpu = "0.16"
pollster = "0.2"

tracing = "0.1"
tracing-subscriber = "0.3"

