[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_wgpu_lib"
path = "src/lib.rs"

[[bin]]
name = "rust_wgpu"
path = "src/main.rs"

[dependencies]
winit = { version = "0.28", features = ["wayland"] }
wgpu = "0.16"
pollster = "0.2"
bytemuck = { version = "1.13", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = "0.3"

